# jackbot-sensor

./: .gitignore  .mergify.yml  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: enable-auto-merge.yml
barter/: Cargo.toml  README.md
barter-data/: Cargo.toml  README.md
barter-data/examples/: order_books_l2_streams_multi_exchange.rs  public_trades_streams_multi_exchange.rs
barter-data/src/: event.rs  lib.rs
barter-execution/: Cargo.toml  README.md
barter-execution/src/: lib.rs  map.rs
barter-execution/tests/: cancel_order.rs
barter-instrument/: Cargo.toml  README.md
barter-integration/: Cargo.toml  README.md
barter-integration/examples/: signed_get_request.rs  simple_websocket_integration.rs
barter-macro/: Cargo.toml
barter/src/: error.rs  lib.rs
barter/tests/: test_engine_process_engine_event_with_audit.rs
docs/: ADVANCED_ORDER_TYPE_SUPPORT.md  IMPLEMENTATION_STATUS.md  L2_DATA_STREAMS.md  MARKET_MAKING_ABSTRACTION.md  MARKET_MAKING_ENGINE.md  MULTI_EXCHANGE_ARBITRAGE.md  ORDER_DISTANCE_CONSTRAINTS.md  RATE_LIMITING.md  RISK_FRAMEWORK.md  SMART_TRADE_ABSTRACTION.md  SNAPSHOT_PIPELINE.md  TRADE_WS_ENDPOINTS.md  USER_WS_AUTH.md  USER_WS_QUIRKS.md
jackbot-data/: Cargo.toml
jackbot-data/src/: lib.rs
jackbot-execution/: README.md
jackbot-integration/: Cargo.toml
jackbot-snapshot/: Cargo.toml
jackbot-snapshot/src/: lib.rs
jackbot-snapshot/tests/: integration.rs
jackbot-strategy/: Cargo.toml
jackbot-strategy/src/: arbitrage.rs  lib.rs
jackbot-strategy/tests/: arbitrage.rs  backtest_integration.rs
(+215 files in other folders)
