[package]
name = "jackbot-snapshot"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "sync"] }
chrono = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

