[package]
name = "jackbot-strategy"
version = "0.1.0"
edition = "2024"
authors = ["JustAStream <justastream.code@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "Strategy trait and utilities for Jackbot"

[dependencies]
serde = { workspace = true, features = ["derive"] }
jackbot-data = { workspace = true }
jackbot-risk = { workspace = true }
jackbot-instrument = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
Jackbot = { path = "../jackbot" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
